issue #414 Alignment for How It Works

--- a/app/assets/stylesheets/components/how_it_works.scss
+++ b/app/assets/stylesheets/components/how_it_works.scss
@@ -31,3 +31,7 @@
     }
   }
 }
+
+.height{
+  height: 165px;
+}
